--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <h3>Web Development</h3>
-        <p>I started learning to code when I was 19 years old because I wanted to make my own websites and aplications.Over time, I have gained a wealth of experience by.
+        <p>I started learning to code when I was 19 years old because I wanted to make my own websites and aplications.Over time, I have gained a wealth of experience by taking cousres.
         </p>
       </div>
       <div class="skill-row">
