--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <h3>Playing Instruments and Hiking</h3>
-        <p class="">I allways like to play an instrument like guitar, piano, clarinet, singing and danceing. Also I try to hike a lot!</p>
+        <p class="">I allways like to play an instrument like guitar, piano, clarinet, singing and dancing. Also I try to hike a lot!</p>
       </div>
     </div>
     <hr>
